Add ResultController